[metadata]
name = pybabyfpa
version = 0.1.0
author = Ilya Rakhlin
author_email = i.rakhlin@gmail.com
description = "This package can be used to control the Baby Brezza's Formula Pro Advanced WiFi."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/irakhlin/pybabyfpa
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
